<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tiara Nail</string>
    <string name="share">share</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="language">언어</string>
	<string name="language_now">한국어</string>
	<string name="push">푸시</string>
	
	<string name="greeting">회원님 안녕하세요</string>
	<string name="balance">잔액</string>
	<string name="charge">적립금</string>
	<string name="tiara_news">티아라 소식</string>
	<string name="nail_info">네일 정보</string>
	<string name="preview">미리보기</string>
	<string name="setting">설정</string>
	<string name="id">아이디</string>
	<string name="pwd">비밀번호</string>
	<string name="login">로그인</string>
	<string name="auto_login">자동로그인</string>
	<string name="find_id">아이디/비밀번호 찾기</string>
	<string name="is_first">처음이신가요</string>
	<string name="join_us">회원가입</string>
	<string name="notice">공지사항</string>
	<string name="surgery_info">시술정보</string>
	<string name="event">이벤트</string>
	<string name="gallery">갤러리</string>
	<string name="self_nail">셀프네일 </string>
	<string name="like">마음에 들면 별표를 클릭해주세요 :)</string>
	<string name="nail_art">네일아트</string>
	<string name="go_back">뒤로가기</string>
	<string name="account_setting">계정설정</string>
	<string name="function_setting">기능설정</string>
	<string name="name">이름</string>
	<string name="phone_number">Phone</string>
	<string name="birthday">BirthDay</string>
	<string name="month">월</string>
	<string name="day">일</string>
	<string name="modify">수정</string>
	<string name="service_list">서비스내역</string>
	<string name="pay">지불금액</string>
	<string name="discount">할인율</string>
	
	
</resources>
