<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppBaseTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:paddingLeft="30dp"
    android:paddingTop="50dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                style="@style/WhiteTextinBoxStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="id"
                android:text="@string/id"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                style="@style/WhiteTextinBoxStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="pwd"
                android:text="@string/pwd"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                style="@style/WhiteTextinBoxStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="name"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                style="@style/WhiteTextinBoxStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="phone_number"
                android:text="@string/phone_number"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                style="@style/WhiteTextinBoxStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="birthday"
                android:text="@string/birthday"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="1dp"
            android:layout_height="240dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/white" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" >

            <LinearLayout
                android:id="@+id/setAccountText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/setId"
                    style="@style/WhiteTextinBoxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="leekns"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/setPw"
                    style="@style/WhiteTextinBoxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="********"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/setName"
                    style="@style/WhiteTextinBoxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="이강산"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/setPhone"
                    style="@style/WhiteTextinBoxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="01039960036"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/setBirth"
                    style="@style/WhiteTextinBoxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12월 23일"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/setAccountEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="invisible" >

                     <TextView
                         android:id="@+id/setId_e"
                         style="@style/WhiteTextinBoxStyle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="leekns"
                         android:textAppearance="?android:attr/textAppearanceLarge" />
 
                <EditText
                    android:id="@+id/setPw_e"
                 style="@style/WhiteEditinBoxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="********" />

                <EditText
                    android:id="@+id/setName_e"
                    style="@style/WhiteEditinBoxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="이강산" />

                <EditText
                    android:id="@+id/setPhone_e"
                    style="@style/WhiteEditinBoxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/setBirth_e"
                    style="@style/WhiteEditinBoxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/setting_modify_button"
            android:onClick="onModifyClick" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/setting_quite_button"
            android:onClick="onLogoutClick" />

    </LinearLayout>

</RelativeLayout>