<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppBaseTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_all_background"
    android:orientation="horizontal"
    android:paddingLeft="30dp"
    android:paddingTop="50dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                style="@style/WhiteTextinBoxStyle"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:gravity="center"
                android:tag="push"
                android:text="@string/push"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView3"
                style="@style/WhiteTextinBoxStyle"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:gravity="center"
                android:tag="language"
                android:text="@string/language"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25sp" />

        </LinearLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="1dp"
            android:layout_height="240dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.7"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/pushButton"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/setting_push_button"
                    android:onClick="onPushClick" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_weight="1" >

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:id="@+id/languageView"
                        android:layout_width="130dp"
                        android:layout_height="250dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="invisible" >

                        <TextView
                            android:id="@+id/languageKorea"
                            style="@style/WhiteTextinBoxStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="한국어"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/languageChina"
                            style="@style/WhiteTextinBoxStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="中國語"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/languageVietnam"
                            style="@style/WhiteTextinBoxStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="tiếng Việt"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/languageUS"
                            style="@style/WhiteTextinBoxStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="English"
                            android:textSize="25sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/languageText"
                        style="@style/WhiteTextinBoxStyle"
                        android:layout_width="130dp"
                        android:layout_height="100dp"
                        android:gravity="center"
                        android:onClick="onLanguageClick"
                        android:tag="language_now"
                        android:text="@string/language_now"
                        android:textSize="25sp" />

                </FrameLayout>

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_go_right" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>